--- a/Day-1/style.css
+++ b/Day-1/style.css
@@ -1,12 +1,12 @@
 html {
   font-size: 10px;
-  background: url("./background.jpg") bottom center;
+  background: url("./img/background.jpg") bottom center;
   background-size: cover;
 }
 
 body,
 html {
-  margin: 0;
+  margin: 0
   padding: 0;
   font-family: sans-serif;
 }
