--- a/day-2/style.css
+++ b/day-2/style.css
@@ -45,3 +45,15 @@ body {
   transition: all 0.05s;
   transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
 }
+
+.circle-center {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: calc(-7px + 50%);
+  margin: auto;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: white;
+}
