--- a/javascript30.css
+++ b/javascript30.css
@@ -1,7 +1,8 @@
 :root {
   --white: #fff;
   --black: #000;
-  --yellow: #e8d35a;
+  --blue: #241e49;
+  --yellow: #ffc600;
 }
 * {
   margin: 0;
@@ -15,7 +16,7 @@ body {
   padding: 20px;
   text-align: center;
   color: var(--white);
-  background-color: var(--black);
+  background-color: var(--blue);
 }
 
 h1 {
@@ -31,6 +32,10 @@ span {
   color: var(--yellow);
 }
 
+header p:nth-child(3) {
+  margin-bottom: 25px;
+}
+
 header h3 {
   color: var(--yellow);
 }
@@ -39,10 +44,15 @@ main {
   margin: 20px 0px;
 }
 
-ul {
-  list-style: none;
+.challengesContainer {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-li {
-  margin: 10px 0px;
+.challenge {
+  margin: 10px;
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  background-color: var(--black);
 }
