--- a/day-10/style.css
+++ b/day-10/style.css
@@ -3,6 +3,17 @@ html {
   background: pink;
 }
 
+body {
+  padding: 10px;
+}
+
+.text {
+  padding-top: 20px;
+  font-family: "helvetica neue";
+  font-size: 16px;
+  text-align: center;
+}
+
 .inbox {
   max-width: 400px;
   margin: 50px auto;
