--- a/javascript30.css
+++ b/javascript30.css
@@ -15,6 +15,7 @@ body {
   place-items: center;
   padding: 20px;
   text-align: center;
+  font-family: "Roboto Mono", monospace;
   color: var(--white);
   background-color: var(--blue);
 }
