--- a/day-3/style.css
+++ b/day-3/style.css
@@ -5,6 +5,8 @@
 }
 
 img {
+  width: 90%;
+  max-width: 800px;
   padding: var(--spacing);
   background: var(--base);
   filter: blur(var(--blur));
@@ -24,9 +26,19 @@ body {
 }
 
 .controls {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
   margin-bottom: 50px;
 }
 
 input {
   width: 100px;
+}
+
+@media (max-width: 768px) {
+  body {
+    font-size: 32px;
+  }
 }
